--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
 
     <body>
          <div class="main-content">
-            {{>header}}        
+            {{>header}}
+            <p>This site was created by Mariana Costa. It uses data from mapbox.com and darksky.net!</p>        
             <img class="portrait" src="/img/me.jpg">
          </div>
         {{>footer}}
