--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,9 +12,10 @@
             {{>header}}
             <p>Use this site to get your weather!</p>
             <form>
-                <input placeholder="location">
+                <input placeholder="insert your location">
                 <button>Search</button>
             </form>
+            <button id="send-location">Get weather at my current location!</button>
             <p id="message-1"></p>
             <p id="message-2"></p>
         </div>        
